2008-09-30  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-units.el (math-standard-units): Add entries used to
	display the the values in the units buffer.
	(math-build-units-table):  Add entries to the units table to be used
	to display the values in the units buffer.
	(math-build-units-table-buffer):  Use the display entry of the units
	table when non-nil.
	(calc-define-unit): Add option to enter display value of unit.

2008-09-29  Michael Albinus  <michael.albinus@gmx.de>

	* vc-hooks.el (vc-file-clearprops): Check, that FILE is a string.

2008-09-29  Eli Zaretskii  <eliz@gnu.org>

	* files.el (locate-dominating-file): Take file-attributes of
	`dir', not of `file' (which never changes).

2008-09-29  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (file-remote-p): Precise doc string; IDENTIFICATION can
	also be `localname'.

	* net/ange-ftp.el (ange-ftp-file-remote-p): Handle `localname' as
	IDENTIFICATION.

2008-09-28  Glenn Morris  <rgm@gnu.org>

	* vc.el (vc-switches): Give it a doc string.

2008-09-28  Romain Francoise  <romain@orebokech.com>

	* comint.el (comint-show-output): Adjust to stickiness changes of
	the output field.

	* startup.el (command-line): Start the daemon server later.

2008-09-28  Martin Rudalics  <rudalics@gmx.at>

	* subr.el (read-quoted-char): Call char-resolve-modifiers
	instead of char-resolve-modifers.

2008-09-27  Glenn Morris  <rgm@gnu.org>

	* play/solitaire.el (solitaire-mode-map): Bind "\r" rather
	than [return].  (Bug#1031)

2008-09-27  Peter Dyballa  <Peter_Dyballa@Freenet.DE>

	* calendar/calendar.el (solar-sunrises-buffer): Fix typo.

2008-09-27  Daiki Ueno  <ueno@unixuser.org>

	* epg.el (epg-wait-for-status): Check if there is no pending
	status.
	Reported by Ted Romer <ted@romerfamily.com>.

2008-09-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line): Turn on menu-bar-mode and
	tool-bar-mode when running as a daemon.

2008-09-26  Eli Zaretskii  <eliz@gnu.org>
